[package]
name = "rust-cache-cleaner"
version = "0.1.0"
description = "Rust 缓存清理工具 - Vue + Tauri 版本"
authors = ["you"]
edition = "2021"

[lib]
name = "rust_cache_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
